changed styling of images in bands that was causing issues on Safari

--- a/Styles/site.css
+++ b/Styles/site.css
@@ -1088,9 +1088,9 @@ ul p {
   background-size: cover;
   height: 40rem;
   background-position: 20% 50%;
-  background-attachment: fixed;
   filter: grayscale(100%);
 }
+
 .band-image {
   background-image: url(../Images/ZImkaOchwat.jpg);
 }
@@ -1475,7 +1475,7 @@ a:visited {
   }
   .desktop-schedule {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: stretch;
     padding: 5rem 0;
   }
@@ -1488,7 +1488,7 @@ a:visited {
     width: 35%;
     min-height: 50%;
     position: relative;
-    right: 8rem;
+    right: 15rem;
   }
   .placeholder .circle {
     position: relative;
@@ -1573,15 +1573,17 @@ a:visited {
   }
   .tracklist .underscored:hover .track-number::before {
     content: "POSŁUCHAJ NA SPOTIFY";
+    font-family: Open Sans, sans-serif;
     position: relative;
-    font-weight: bold;
+    font-style: normal;
+    font-weight: 600;
     color: #ffffff;
     right: 2rem;
     bottom: 0.3rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     border: solid 0.1rem #ff3d00;
     border-radius: 2rem;
-    padding: 0.5rem;
+    padding: 0.5rem 1.5rem;
   }
   .tracklist .underscored:hover .track-number {
     color: #ff3d00 !important;
